cabal-version:      2.4
name:               alexandra
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             MensurOwary
maintainer:         mensurowary@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable alexandra
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        MissingH ^>=1.5.0.1,
        containers ^>=0.6.5.1,
        parsec ^>=3.1.15.1,
        mtl ^>=2.2.2,
        haskeline ^>=0.8.2
    hs-source-dirs:   app
    default-language: Haskell2010
